# proto-plus-plugin

./: LICENSE.rst  README.rst  pyproject.toml  setup.cfg
.run/: compile.run.xml
src/codestare/proto/: compile.py  full_compile  full_compile.json  protoc_request.json  protoc_request.txt
test/: full_compile.json  protoc_request.json
