[metadata]
name = proto-plus-plugin
author = Maximilian Schmidt
author_email = ga97lul@mytum.de
url = https://github.com/saggitar/proto-plus-plugin.git
description = "Protoc plugin to compile proto plus python classes"
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = distutils, setuptools
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >=3.7
package_dir =
    = src
packages = find_namespace:
install_requires =
    protobuf

[options.entry_points]
console_scripts =
    protoc-gen-proto-plus = codestare.proto.compile:main

[options.packages.find]
where = src

